# polang

./: .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
compiler/: CMakeLists.txt
compiler/include/compiler/: codegen.hpp  codegen_visitor.hpp  mlir_codegen.hpp
compiler/src/: codegen.cpp  codegen_visitor.cpp  main.cpp  mlir_codegen.cpp
mlir/: CMakeLists.txt
mlir/include/polang/: MLIRGen.h  PolangTypeConverter.h
mlir/include/polang/Conversion/: Passes.h
mlir/include/polang/Dialect/: Passes.h  PolangASTDialect.h  PolangASTDialect.td  PolangASTOps.h  PolangASTOps.td  PolangASTTypes.h  PolangASTTypes.td  PolangDialect.h  PolangDialect.td  PolangEnums.td  PolangLocations.h  PolangOps.h  PolangOps.td  PolangTypes.h  PolangTypes.td
mlir/lib/Conversion/: CMakeLists.txt  PolangToStandard.cpp
mlir/lib/Dialect/: CMakeLists.txt  PolangDialect.cpp  PolangOps.cpp  PolangTypeInference.cpp  PolangTypes.cpp
mlir/lib/MLIRGen/: CMakeLists.txt  MLIRGen.cpp  PolangLocations.cpp  PolangTypeConverter.cpp
mlir/lib/Transforms/: CMakeLists.txt  Monomorphization.cpp  NameResolution.cpp  TypeCheck.cpp  TypeInference.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/polang-opt/: CMakeLists.txt  polang-opt.cpp
parser/: CMakeLists.txt
parser/include/parser/: ast_printer.hpp  error_reporter.hpp  node.hpp  operator_utils.hpp  parser_api.hpp  polang_types.hpp  type_checker.hpp  visitor.hpp
parser/src/: ast_printer.cpp  error_reporter.cpp  lexer.l  node.cpp  node_stubs.cpp  operator_utils.cpp  parser.y  parser_api.cpp  type_checker.cpp
repl/: CMakeLists.txt
repl/include/repl/: input_checker.hpp  repl_session.hpp
repl/src/: main.cpp  repl_session.cpp
tests/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  type_check_test.cpp
tests/common/: process_helper.hpp
tests/compiler/: CMakeLists.txt  compiler_test.cpp  conversion_pass_test.cpp  mlir_verifier_test.cpp  type_inference_pass_test.cpp
tests/integration/: CMakeLists.txt  compiler_test.cpp  integration_test_helper.hpp  repl_test.cpp
tests/lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/lit/AST/: assignment.po  bool-literals.po  cast-expression.po  comparisons.po  control-flow.po  double-literals.po  functions.po  let-expressions.po  literals.po  method-calls.po  modules-from-import.po  modules-import-as.po  modules-import.po  modules-nested.po  modules-no-exports.po  modules-qualified-call.po  modules-qualified-var.po  modules.po  mut-let-expr-ast.po  mut-type-annotation-ast.po  mutable-variables.po  ref-type-annotation-func.po  ref-type-annotation.po  variables.po
tests/lit/Errors/: argument-type-mismatch.po  assignment-type-mismatch.po  deref-non-reference.po  function-arity.po  if-branch-type-mismatch.po  immutable-reassignment.po  invalid-cast-bool-var.po  invalid-cast-bool.po  invalid-cast-to-bool.po  missing-else.po  module-undefined-member.po  mut-assign-type-mismatch.po  nested-ref-expression.po  nested-ref-type-annotation.po  param-type-inference-error.po  param-type-inference-multiple-errors.po  ref-type-annotation-func-param-mismatch.po  ref-type-annotation-mismatch.po  ref-type-annotation-non-ref.po  ref-type-annotation-width-mismatch.po  ref-type-conflicting-constraints.po  return-type-mismatch.po  syntax-error-paren.po  syntax-errors.po  type-error-if-condition.po  type-mismatch.po  undefined-function.po  undefined-variable.po
tests/lit/Execution/: bool-operations.po  cast-float-to-int-saturate.po  cast-float-to-int.po  cast-float-widening.po  cast-int-narrowing.po  cast-int-to-float.po  cast-int-widening.po  cast-same-width.po  closures.po  comparison-operators.po  conditionals.po  direct-var-annotation-propagation.po  double-operations.po  f32-constant.po  factorial.po  fibonacci.po  float-arithmetic.po  float-comparison.po  float-division.po  float-multiplication.po  float-narrowing-cast.po  float-same-width-cast.po  float-subtraction.po  float-type-functions.po  float-types.po  function-param-propagation.po  functions.po  hello.po  integer-types.po  let-expressions.po  module-export-variable.po  module-import-all.po  module-import-variable.po  module-import.po  module-qualified-call.po  mut-chained-let.po  mut-closure-capture.po  mut-if-expr.po  mut-in-function.po  mut-let-expr.po  (+42 more)
tests/lit/LLVMIR/: arithmetic.po  bool-type.po  cast-ops.po  comparisons.po  constant-folding.po  control-flow.po  double-comparisons.po  float-comparisons-full.po  float-ops.po  functions.po  let-expressions.po  mut-float-types.po  mut-let-expr.po  mut-type-annotation-let-expr.po  mut-type-annotation.po  mutable-variables.po  nested-if.po  recursive-function.po  types.po  unsigned-cast-ops.po  variable-shadowing.po
tests/lit/MLIR/: arithmetic.po  cast-operations.po  comparisons.po  constants.po  control-flow.po  double-arithmetic.po  f32-type.po  float-types.po  function-calls.po  functions.po  integer-types.po  let-expressions.po  modules-name-mangling.po  mut-let-expr-mlir.po  mut-type-annotation-mlir.po  mutable-variables.po  polymorphic-binary-op.po  polymorphic-comparison.po  polymorphic-constants.po  polymorphic-double.po  polymorphic-identity.po  polymorphic-multi-call.po  polymorphic-multi-param.po  polymorphic-multi-type.po  polymorphic-recursive.po  polymorphic-uncalled.po  polymorphic-unused-param.po  polymorphic-with-capture.po  ref-type-annotation-func.po  signed-integer-types.po  type-inference-expressions.po  type-inference-functions.po  type-inference-if.po  type-inference-literals.po  type-inference-params-bool.po  type-inference-params-callsite.po  type-inference-params-closure.po  type-inference-params-funcall.po  type-inference-params-multiple.po  type-inference-params.po  (+3 more)
tests/parser/: CMakeLists.txt  ast_printer_test.cpp  error_reporter_test.cpp  error_test.cpp  lexer_test.cpp  operator_utils_test.cpp  parser_control_flow_test.cpp  parser_declaration_test.cpp  parser_expression_test.cpp  parser_statement_test.cpp  parser_test_helper.hpp  polang_types_test.cpp  type_check_test.cpp
tests/repl/: CMakeLists.txt  repl_test.cpp  repl_unit_test.cpp
(+85 files in other folders)
